Use ProcessBuilder for calling pdftoxml in order to support file with space characters
and ProcessBuilder is better practice…


Former-commit-id: 36589091efb6c3a063070633adb3d988fd92751e